<resources>
    <string name="app_name">印家共享打印</string>
    <string name="hello_world">Hello 妹子!</string>
    <string name="action_settings">Settings</string>
    <string name="text_back">返回</string>
    <string name="version_title">温馨提示</string>
    <string name="version_content">发现新版本，请立即更新</string>
    <string name="version_btn">立即更新</string>
    <string name="login">登录</string>
    <string name="login_weixin">微信登录</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="hint_psd">请输入您的密码</string>
    <string name="forget_pass">忘记密码</string>
    <string name="new_user">注册新用户</string>
    <string name="login_failure">登录失败，请重新登录</string>
    <string name="exit_program">再按一次退出程序</string>
    <string name="dlg_content_loginout">是否确定退出当前账号&#063;</string>
    <string name="dlg_call">是否立即拨打热线电话&#063;</string>
    <string name="register">注册</string>
    <string name="hint_code">请输入验证码</string>
    <string name="eagerly_fetch">获取验证码</string>
    <string name="hint_set_psd">请设置6&#8211;16位登录密码</string>
    <string name="hint_real_name">请输入您的真实姓名</string>
    <string name="hint_invitation_code">请输入邀请码（可不填）</string>
    <string name="register_agreement">点击注册即表示您同意</string>
    <string name="register_user_agreement">货易帮用户协议</string>
    <string name="eagerly_register">已有账号，立即登录</string>
    <string name="register_failure">注册失败</string>
    <string name="psd_no_null">登录密码不能为空</string>
    <string name="psd_set">登录密码需要设置为6&#8211;16位</string>
    <string name="psd_set_no_chinese">密码设置不能有汉字</string>
    <string name="code_no_null">验证码不能为空</string>
    <string name="phone_no_null">手机号码不能为空</string>
    <string name="phone_set_null">密码格式有误，请重新输入</string>
    <string name="phone_format_error">手机号码格式不正确</string>
    <string name="name_no_null">姓名不能为空</string>
    <string name="name_only_chinese">姓名只能填写为汉字</string>
    <string name="resend_code">重发验证码</string>
    <string name="upload_failure">上传失败</string>
    <string name="add_order_failure">下单失败</string>
    <string name="add_order_success">下单成功</string>
    <string name="net_error">网络错误</string>
    <string name="file_pick">选取文件</string>
    <string name="size_out">文件大小超限</string>
    <string name="file_error">文件错误</string>
    <string name="file_empty">文件为空</string>
    <string name="price_error">打印机价格错误</string>
    <string name="file_outtime">文件超时，请重新上传</string>
    <string name="file_outpage">不可打印大于200页的文档</string>
    <string name="page_out">打印页数不能超过剩余纸张数</string>
    <string name="page_limit">只能单面打印</string>
    <string name="printer_error">打印机故障</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成(%1$d/9)</string>
    <string name="dlg_content_update_version">是否确定更新新版本&#063;</string>
    <string name="dlg_content_clear_cache">是否确定删除缓存&#063;</string>
    <string-array name="chooseType">
        <item>相册</item>
        <item>拍照</item>
    </string-array>
    <string name="title_contact">联系人</string>
    <string name="title_add_contact">添加联系人</string>
    <string name="text_search_yj_num">输入印家号／手机号搜索</string>
    <string name="text_add_by_phone">添加手机联系人</string>
    <string name="text_scan_friend">扫一扫加好友</string>
    <string name="text_my_qr_card">我的二维码名片</string>
    <string name="text_search_cancel">取消</string>
    <string name="text_search_hint">输入手机号／印家号搜索</string>
    <string name="text_search_result_hint">查找手机号／印家号:</string>
    <string name="text_detail">详细资料</string>
    <string name="text_verification_friend">朋友验证</string>
    <string name="text_verification_send">发送</string>
    <string name="text_verification_hint">您需要发送验证申请,等待对方通过~</string>
    <string name="text_verification_et_hint">我是</string>
    <string name="title_add_by_phone">手机联系人</string>
    <string name="title_qr">二维码名片</string>
    <string name="title_top_hint">印家打印二维码名片</string>
    <string name="value_my_qr_yjnum">印家号:%s</string>
    <string name="title_bottom_hint">在印家打印上扫一扫加我</string>
    <string name="title_new_friend">新的朋友</string>
    <string name="btn_add_friend">添加朋友</string>
    <string name="title_my_group">群组</string>
    <string name="btn_create_group">发起群</string>
    <string name="btn_cancel">取消</string>
    <string name="title_add_member">联系人</string>
    <string name="title_selcet_newowner">选择新群主</string>
    <string name="hint_choose_members">已选择:%d人</string>
    <string name="btn_hint_members">确定(%1$d/%2$d)</string>
    <string name="title_phone">手机通讯录</string>
    <string name="title_group">群组</string>
    <string name="btn_contact_him">联系Ta</string>
    <string name="btn_contact_add">添加</string>
    <string name="btn_contact_accept">接受</string>
    <string name="red_package_type_description_luck">当前为拼手气红包,改为</string>
    <string name="red_package_type_description_group">当前为群红包,改为</string>
    <string name="red_package_other_name_group">群红包</string>
    <string name="red_package_other_name_luck">拼手气红包</string>
    <string name="group_left">本群共</string>
    <string name="red_group_num_unit">人</string>
    <string name="red_group_bottom_hint">未领取的红包,将于24小时候退至个人账户</string>
    <string name="red_group_bottom_hint_no">未使用的群红包,将于群解散后退至各人账户</string>
    <string name="red_group_bottom_hint_no_get">群红包不可领取,群成员打印时可选择群红包支付</string>
    <string name="red_package_default_msg">给你发了一个红包</string>
    <string name="red_package_group_msg">发了一个群红包</string>
    <string name="red_package_check_detail">查看领取详情</string>
    <string name="red_package_check_detail_out">看看大家的手气</string>
    <string name="red_package_detail_failure">该红包已失效</string>
    <string name="red_package_detail_gone">手慢了,红包已抢完</string>
    <string name="red_package_group_bottom_1">群红包不可领取,</string>
    <string name="red_package_group_bottom_2">群成员打印可选择群红包支付</string>
    <string name="edt_digits">0123456789.</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="status_zero">审批中</string>
    <string name="status_two">审批完成</string>
    <string name="status_three">已驳回</string>
    <string name="status_four">已撤销</string>
    <string name="status_five">打印凭证</string>
    <string name="status_six">已打印</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="video_call">[视频通话]</string>
    <string name="red_package__call">[发红包]</string>
    <string name="dynamic_expression">[动态表情]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
</resources>