<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray1"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <RelativeLayout android:id="@+id/titleBar"
                    style="@style/Re_contact_title">

        <include layout="@layout/layout_contact_back"/>

        <TextView
            style="@style/contact_title"
            android:text="@string/title_add_contact"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_line_h"
        android:layout_marginTop="@dimen/add_contact_margin_top"
        android:background="#e5e5e5"/>

    <LinearLayout
        android:id="@+id/input_yinJia_number_space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recycler_address_book_h"
        android:background="@drawable/bg_recycler_click_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/recycler_icon_w_h"
            android:layout_height="@dimen/recycler_icon_w_h"
            android:layout_marginLeft="@dimen/recycler_icon_margin_l"
            android:layout_marginRight="@dimen/recycler_icon_margin_r"
            android:background="@drawable/ic_add_search"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/recycler_address_book_tv_size"
            android:text="@string/text_search_yj_num"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_line_h"
            android:layout_marginLeft="@dimen/recycler_icon_margin_l"
            android:layout_marginRight="@dimen/recycler_icon_margin_r"
            android:background="#e5e5e5"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_by_addressbook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recycler_address_book_h"
        android:background="@drawable/bg_recycler_click_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/recycler_icon_w_h"
            android:layout_height="@dimen/recycler_icon_w_h"
            android:layout_marginLeft="@dimen/recycler_icon_margin_l"
            android:layout_marginRight="@dimen/recycler_icon_margin_r"
            android:background="@drawable/ic_contact_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/recycler_address_book_tv_size"
            android:text="@string/text_add_by_phone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_line_h"
            android:layout_marginLeft="@dimen/recycler_icon_margin_l"
            android:layout_marginRight="@dimen/recycler_icon_margin_r"
            android:background="#e5e5e5"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_by_qr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recycler_address_book_h"
        android:background="@drawable/bg_recycler_click_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/recycler_icon_w_h"
            android:layout_height="@dimen/recycler_icon_w_h"
            android:layout_marginLeft="@dimen/recycler_icon_margin_l"
            android:layout_marginRight="@dimen/recycler_icon_margin_r"
            android:background="@drawable/ic_add_scan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/recycler_address_book_tv_size"
            android:text="@string/text_scan_friend"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_line_h"
        android:background="#e5e5e5"
        />

    <LinearLayout
        android:id="@+id/my_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_contact_margin_top"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/add_my_qr_tv_size"
            android:text="@string/text_my_qr_card"/>

        <ImageView
            android:layout_marginLeft="@dimen/add_my_qr_margin"
            android:layout_width="@dimen/add_qr_icon_w_h"
            android:layout_height="@dimen/add_qr_icon_w_h"
            android:background="@drawable/ic_add_my_qr"/>
    </LinearLayout>
</LinearLayout>
