<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/big_red_package"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dismiss_red_package" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_head_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/iv_head" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="波比"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_eighteen" />

            <TextView
                android:id="@+id/txt_default_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/red_package_default_msg"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_fourteen"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt_leave_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/red_package_detail_gone"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_twenty_two" />

            <ImageView
                android:id="@+id/img_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/open_red_package"
                android:visibility="invisible" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txt_look_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/red_package_check_detail_out"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_fifteen" />

    </LinearLayout>
</LinearLayout>