<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:orientation="vertical" >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center_vertical"
                        android:text="手机号"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/register_phonenum"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_phone"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray3"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/gray1" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center_vertical"
                        android:text="验证码"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/register_code"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_code"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textColorHint="@color/gray3"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/code_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/eagerly_fetch"
                        android:textColor="@color/yellow"
                        android:textSize="16sp" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="@dimen/distance_ten"
                    android:background="@color/gray1" />
            </LinearLayout>

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:padding="15dip"
            android:background="@drawable/broder_yellow_full"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </LinearLayout>

</RelativeLayout>